// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findPaths 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "node": {
            "id": "baz",
          },
        },
      ],
      "node": {
        "id": "foo",
      },
    },
  ],
  "node": {
    "id": "target",
  },
}
`;

exports[`findPaths 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "node": {
            "id": "baz",
          },
        },
      ],
      "node": {
        "id": "foo",
      },
    },
    {
      "children": [
        {
          "children": [],
          "node": {
            "id": "baz",
          },
        },
      ],
      "node": {
        "id": "bar",
      },
    },
  ],
  "node": {
    "id": "target",
  },
}
`;

exports[`findPaths 3`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "node": {
            "id": "baz",
          },
        },
      ],
      "node": {
        "id": "foo",
      },
    },
  ],
  "node": {
    "id": "target",
  },
}
`;
